--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@smartweb/vue-flash-message": "^0.6.4",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "nuxt": "^2.0.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.0.3",
     "sequelize": "^5.21.7",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
