--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "multer": "^1.4.2",
     "multer-sharp-s3": "^0.2.0",
     "nuxt": "^2.0.0",
