--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/vuetify": "^1.11.2",
     "@smartweb/vue-flash-message": "^0.6.4",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.668.0",
