--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "makedinner-nuxt-express",
   "version": "1.0.0",
-  "description": "My good Nuxt.js project",
+  "description": "My top-notch Nuxt.js project",
   "author": "daikon0",
   "private": true,
   "scripts": {
@@ -9,18 +9,14 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
-    "@nuxtjs/vuetify": "^1.11.2",
-    "@smartweb/vue-flash-message": "^0.6.4",
     "aws-cli": "0.0.2",
-    "aws-sdk": "^2.668.0",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0",
+    "aws-sdk": "^2.678.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
@@ -30,15 +26,15 @@
     "nuxt": "^2.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.0.3",
-    "sequelize": "^5.21.7",
+    "pg": "^8.2.1",
+    "sequelize": "^5.21.9",
     "sequelize-cli": "^5.5.1",
     "sharp": "^0.25.2",
-    "uuid": "^8.0.0",
-    "vuelidate": "^0.7.5"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
+    "@nuxtjs/vuetify": "^1.0.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
@@ -46,6 +42,10 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "vue-jest": "^4.0.0-0"
   }
 }
