--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
+    "lodash.clonedeep": "^4.5.0",
     "multer": "^1.4.2",
     "multer-sharp-s3": "^0.2.0",
     "nuxt": "^2.0.0",
