--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
+    "axios": "^0.19.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
