--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "jest"
+    "test": "jest",
+    "type-check": "npx tsc -p . --noEmit"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@types/express": "^4.17.7",
+    "@types/passport": "^1.0.4",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
     "axios": "^0.19.2",
@@ -35,22 +38,26 @@
     "sequelize": "^5.21.9",
     "sequelize-cli": "^5.5.1",
     "sharp": "^0.25.2",
-    "uuid": "^8.0.0"
+    "ts-loader": "^8.0.1",
+    "typescript": "^3.9.6",
+    "uuid": "^8.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
-    "@nuxtjs/vuetify": "^1.0.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1",
+    "@nuxtjs/vuetify": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.1.0",
-    "vue-jest": "^4.0.0-0"
+    "nodemon": "^1.18.9",
+    "prettier": "^1.19.1",
+    "vue-jest": "^4.0.0-beta.4"
   }
 }
