--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "type-check": "npx tsc -p . --noEmit"
   },
   "dependencies": {
+    "@nuxt/typescript-build": "^2.0.0",
+    "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@types/express": "^4.17.7",
