--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.4",
     "@types/passport": "^1.0.4",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
@@ -40,6 +41,7 @@
     "sequelize": "^5.21.9",
     "sequelize-cli": "^5.5.1",
     "sharp": "^0.25.2",
+    "ts-jest": "^26.1.3",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.6",
     "uuid": "^8.0.0",
