--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
     "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
     "axios": "^0.19.2",
