--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@types/bluebird": "^3.5.32",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/validator": "^13.1.0",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
     "axios": "^0.19.2",
