--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@types/bluebird": "^3.5.32",
+    "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/uuid": "^8.0.0",
     "@types/validator": "^13.1.0",
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
