--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
+    "@types/multer": "^1.4.3",
     "@types/node": "^14.0.23",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
