--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^14.0.23",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/sharp": "^0.25.0",
     "@types/uuid": "^8.0.0",
     "@types/validator": "^13.1.0",
     "aws-cli": "0.0.2",
